--- a/app/src/main/res/layout/note_list_content.xml
+++ b/app/src/main/res/layout/note_list_content.xml
@@ -10,20 +10,19 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="2dp"
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
         android:textAppearance="@style/TitleListElement"
-        android:ellipsize="end"/>
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="10dp"
-        android:layout_below="@+id/titleTextView"/>
+        android:ellipsize="end"
+        android:layout_centerVertical="true"/>
+    <!--<TextView-->
+        <!--android:id="@+id/dateTextView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="15dp"-->
+        <!--android:paddingLeft="20dp"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:layout_below="@+id/titleTextView"/>-->
 
     <!--<View-->
     <!--android:layout_width="match_parent"-->
