--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="fab_margin">16dp</dimen>
     <dimen name="item_width">300dp</dimen>
     <dimen name="item_height">70dp</dimen>
 </resources>
