Details View added for both modes, "tablet and smartphone". GetDetails Task for notes done. Added Sort Options in menu.
TODO:
I have to control configuration changes , for activities and tasks.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="darkGray">#555</color>
     <color name="backgroundMainColor">#EEEEEE</color>
+    <color name="dividerGray">#66666666</color>
+
 </resources>
