--- a/app/src/main/res/layout/note_list_content.xml
+++ b/app/src/main/res/layout/note_list_content.xml
@@ -13,21 +13,13 @@
         android:paddingLeft="20dp"
         android:paddingRight="10dp"
         android:textAppearance="@style/TitleListElement"
-        android:ellipsize="end"
-        android:layout_centerVertical="true"/>
-    <!--<TextView-->
-        <!--android:id="@+id/dateTextView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="15dp"-->
-        <!--android:paddingLeft="20dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--android:layout_below="@+id/titleTextView"/>-->
+        android:ellipsize="end"/>
 
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1px"-->
-    <!--android:paddingLeft="2dp"-->
-    <!--android:paddingRight="2dp"-->
-    <!--android:background="@color/divider_gray"/>-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:background="@color/dividerGray"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
