--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
 
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="item_width">300dp</dimen>
-    <dimen name="item_height">70dp</dimen>
+    <dimen name="item_height">50dp</dimen>
+
+    <dimen name="app_bar_height">200dp</dimen>
 </resources>
