--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".NoteListActivity">
+    tools:context=".activities.NoteListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -28,7 +28,9 @@
         android:background="@color/backgroundMainColor"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <include android:id="@+id/noLoginLayout" layout="@layout/no_login_layout"/>
         <include layout="@layout/note_list" />
+
     </FrameLayout>
 
     <android.support.design.widget.FloatingActionButton
@@ -37,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_action_add" />
+        android:src="@drawable/ic_action_add"
+        android:visibility="invisible"/>
 
 </android.support.design.widget.CoordinatorLayout>
