--- a/app/src/main/res/layout/note_list.xml
+++ b/app/src/main/res/layout/note_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+     <android.support.v7.widget.RecyclerView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/item_list"
@@ -14,6 +14,6 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             app:layoutManager="LinearLayoutManager"
-            tools:context=".NoteListActivity" />
+            tools:context=".activities.NoteListActivity" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
