--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sbc.bqevernote.NoteListActivity" >
+    tools:context=".activities.NoteListActivity" >
 
     <item
         android:id="@+id/changeOrder"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_sort_date"
+        android:icon="@drawable/ic_action_sort_alphabetically"
         android:title="@string/sort"/>
 </menu>
